--- a/ecommerce-client/src/app/shared/components/sidebar/sidebar.component.html
+++ b/ecommerce-client/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,5 +1,6 @@
 <!-- Side navigation -->
 <div class="sidenav">
+  <span id="AllCat">All Categories</span>
   <a href="#">About</a>
   <a href="#">Services</a>
   <a href="#">Clients</a>
