--- a/ecommerce-client/src/app/shared/components/navbar/navbar.component.html
+++ b/ecommerce-client/src/app/shared/components/navbar/navbar.component.html
@@ -1,1 +1,6 @@
-<p>navbar works!</p>
+<div id="top-nav" class="container-fluid">
+  <div class="row">
+    <div class="col">
+    </div>
+  </div>
+</div>
