Added Circular STD font CDN

--- a/ecommerce-client/src/app/shared/components/sidebar/sidebar.component.html
+++ b/ecommerce-client/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,8 +1,10 @@
 <!-- Side navigation -->
 <div class="sidenav">
-  <span id="AllCat">All Categories</span>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
+  <span id="AllCat">ALL CATEGORIES</span>
+  <ul>
+    <ul><a href="#">Test</a></ul>
+    <ul><a href="#">Test 2</a>
+      <ul><a href="#">Test3</a></ul>
+    </ul>
+  </ul>
 </div>
