--- a/ecommerce-client/src/app/shared/components/sidebar/sidebar.component.css
+++ b/ecommerce-client/src/app/shared/components/sidebar/sidebar.component.css
@@ -10,21 +10,21 @@
   padding-top: 20px;
   position: absolute;
   box-shadow: 2px 6px 5px rgba(0, 0, 0, 0.25); /* Box Shadow*/
+  border-radius: 1%;
 }
 
 /* The navigation menu links */
 .sidenav a {
-  padding: 6px 8px 6px 16px;
+  /* padding: 6px 8px 6px 16px; */
   text-decoration: none;
   font-size: 25px;
   color: #171717;
-  display: block;
+  /* display: block; */
+  font-family: Circular Std Medium;
 }
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
-  text-decoration-line: underline;
-  text-decoration-style: solid;
   font-weight: bold;
   content: "|";
 }
@@ -36,10 +36,11 @@
 }
 
 #AllCat{
-  font-family: Circular Std;
+  font-family: Circular Std Medium;
   font-style: normal;
   font-weight: bold;
   display: flex;
   align-items: flex-end;
   color: #A3A3A3;
+  padding-left: 20px;
 }
