--- a/ecommerce-client/src/app/shared/components/navbar/navbar.component.html
+++ b/ecommerce-client/src/app/shared/components/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <div id="top-nav" class="container-fluid">
   <div class="row">
     <div class="col">
+      <img id="logo" src="../../../../assets/logo.png">
     </div>
   </div>
 </div>
