side bar with colors

--- a/ecommerce-client/src/app/shared/components/sidebar/sidebar.component.html
+++ b/ecommerce-client/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,10 +1,12 @@
 <!-- Side navigation -->
 <div class="sidenav">
-  <span id="AllCat">ALL CATEGORIES</span>
+  <p id="AllCat">ALL CATEGORIES</p>
   <ul>
-    <ul><a href="#">Test</a></ul>
-    <ul><a href="#">Test 2</a>
-      <ul><a href="#">Test3</a></ul>
+    <ul><a href="#">BEDROOMS</a></ul>
+    <ul><a class="selected" href="#">CHAIRS</a>
+      <div class="subItems">
+        <ul><a href="#">Manager Chairs</a></ul>
+      </div>
     </ul>
   </ul>
 </div>
