--- a/ecommerce-client/src/app/shared/components/sidebar/sidebar.component.css
+++ b/ecommerce-client/src/app/shared/components/sidebar/sidebar.component.css
@@ -15,18 +15,16 @@
 
 /* The navigation menu links */
 .sidenav a {
-  /* padding: 6px 8px 6px 16px; */
   text-decoration: none;
   font-size: 25px;
   color: #171717;
-  /* display: block; */
+  display: block;
   font-family: Circular Std Medium;
 }
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
   font-weight: bold;
-  content: "|";
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
@@ -43,4 +41,21 @@
   align-items: flex-end;
   color: #A3A3A3;
   padding-left: 20px;
+}
+ul{
+  padding-left: 20px;
+}
+.selected:before{
+  content: "| ";
+  font-weight: bold;
+}
+.subItems a{
+  color: #60B32E !important;
+  display: flex;
+  font-size: 15px;
+}
+.subItems a:hover{
+  color: #F39200 !important;
+  display: flex;
+  font-size: 15px;
 }
