classes added for different category items

--- a/ecommerce-client/src/app/shared/components/sidebar/sidebar.component.html
+++ b/ecommerce-client/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,12 +1,15 @@
 <!-- Side navigation -->
 <div class="sidenav">
-  <p id="AllCat">ALL CATEGORIES</p>
+  <h5 id="AllCat">ALL CATEGORIES</h5>
   <ul>
-    <ul><a href="#">BEDROOMS</a></ul>
-    <ul><a class="selected" href="#">CHAIRS</a>
+    <li><a href="#">BEDROOMS</a></li>
+    <li><a class="selected" href="#">CHAIRS</a>
       <div class="subItems">
-        <ul><a href="#">Manager Chairs</a></ul>
+        <ul>
+          <li><a href="#">Manager Chairs</a></li>
+          <li class="subItemSelected"><a>Study Chairs</a></li>
+        </ul>
       </div>
-    </ul>
+    </li>
   </ul>
 </div>
