--- a/ecommerce-client/src/app/shared/components/sidebar/sidebar.component.css
+++ b/ecommerce-client/src/app/shared/components/sidebar/sidebar.component.css
@@ -12,6 +12,9 @@
   box-shadow: 2px 6px 5px rgba(0, 0, 0, 0.25); /* Box Shadow*/
   border-radius: 1%;
 }
+.sidenav ul{
+  list-style: none
+}
 
 /* The navigation menu links */
 .sidenav a {
@@ -37,17 +40,19 @@
   font-family: Circular Std Medium;
   font-style: normal;
   font-weight: bold;
-  display: flex;
-  align-items: flex-end;
   color: #A3A3A3;
   padding-left: 20px;
+  left: 21px;
+  top: 20px;
 }
 ul{
   padding-left: 20px;
 }
 .selected:before{
   content: "| ";
-  font-weight: bold;
+}
+.selected{
+ font-weight: bold !important;
 }
 .subItems a{
   color: #60B32E !important;
@@ -58,4 +63,10 @@ ul{
   color: #F39200 !important;
   display: flex;
   font-size: 15px;
+}
+.subItemSelected a{
+  color: #F39200 !important;
+  display: flex;
+  font-size: 15px;
+  font-weight: bold;
 }
