Added dynamic categories from DB and fix styles

--- a/ecommerce-client/src/app/shared/components/navbar/navbar.component.css
+++ b/ecommerce-client/src/app/shared/components/navbar/navbar.component.css
@@ -7,6 +7,9 @@
 }
 #logo{
   position: absolute;
-  left: 126px;
-  top: 19px;
+  left: 7.9rem;
+  top: 1.19rem;
+}
+#subMenu{
+  padding-left: 50%;
 }
