--- a/ecommerce-client/src/app/shared/components/navbar/navbar.component.html
+++ b/ecommerce-client/src/app/shared/components/navbar/navbar.component.html
@@ -1,7 +1,40 @@
-<div id="top-nav" class="container-fluid">
+<!-- <div id="top-nav" class="container-fluid">
   <div class="row">
     <div class="col">
-      <img id="logo" src="../../../../assets/logo.png">
+      <a routerLink="/">
+        <img id="logo" src="../../../../assets/logo.png">
+      </a>
     </div>
   </div>
-</div>
+</div> -->
+<nav class="navbar navbar-expand-md" id="top-nav">
+  <a class="navbar-brand" href="#"><img id="logo" src="../../../../assets/logo.png"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="subMenu">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+        <div class="dropdown-menu" aria-labelledby="dropdown04">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-md-0">
+      <input class="form-control" type="text" placeholder="Search">
+    </form>
+  </div>
+</nav>
