layout and products card grid, pagination

--- a/ecommerce-client/src/app/pages/products/products.component.html
+++ b/ecommerce-client/src/app/pages/products/products.component.html
@@ -1,8 +1,25 @@
-    <div class="card">
-      <div class="card-header">
-        <div class="head">{{head.name}}</div>
-      </div>
-      <div class="card-body">
-      <p>products works!</p>
+<div class="content">
+  <div class="row">
+    <div class="col">
+      <pagination-controls class="float-right" id="listing_pagination" maxSize=5 directionLinks="true"
+        (pageChange)="page = $event" responsive="true"></pagination-controls>
     </div>
   </div>
+  <div class="row">
+    <div *ngFor="let head of heads | paginate: {id: 'listing_pagination',
+    itemsPerPage: 8,
+    currentPage: page,
+    totalItems: totalRecords}">
+      <div class="col">
+        <div class="card">
+          <img class="card-img-top" src="{{head.url}}" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">{{head.name}}</h5>
+            <p class="card-text">Test Text</p>
+            <a href="#" class="btn btn-primary">Add to Cart</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
