--- a/ecommerce-client/src/app/shared/components/sidebar/sidebar.component.html
+++ b/ecommerce-client/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,27 +1,28 @@
-<!-- Side navigation -->
-<div class="sidenav">
-  <h5 id="AllCat">ALL CATEGORIES</h5>
-  <ul>
-    <li *ngFor="let category of Categories; let i = index">
-      <!-- if have no sub categories -->
-      <a class="{{category.class}}" (click)="getThisCategory(category)" *ngIf="!category.subCatStatus">
-        {{category.name | uppercase}}
-      </a>
-      <!-- if have sub categories -->
-      <a class="{{category.class}}" (click)="getThisCategory(category)" [attr.aria-expanded]="!category.isCollapsed"
-        attr.aria-controls="collapseBasic.{{category.name}}" *ngIf="category.subCatStatus">
-        {{category.name | uppercase}}
-      </a>
-      <!--Display the submenu items-->
-      <div id="collapseBasic.{{category.name}}" [collapse]="category.isCollapsed" class="subItems"
-        *ngIf="category.subCatStatus" [isAnimated]="true">
 
+      <!-- Side navigation -->
+      <div class="sidenav sidebar-wrapper">
+        <h5 id="AllCat">ALL CATEGORIES</h5>
         <ul>
-          <li class="{{subCategory.class}}" *ngFor="let subCategory of category.subCategories">
-            <a (click)="getSubCategories(subCategory)" href="#">{{subCategory.name}}</a></li>
+          <li *ngFor="let category of Categories; let i = index">
+            <!-- if have no sub categories -->
+            <a class="{{category.class}}" (click)="getThisCategory(category)" *ngIf="!category.subCatStatus">
+              {{category.name | uppercase}}
+            </a>
+            <!-- if have sub categories -->
+            <a class="{{category.class}}" (click)="getThisCategory(category)" [attr.aria-expanded]="!category.isCollapsed"
+              attr.aria-controls="collapseBasic.{{category.name}}" *ngIf="category.subCatStatus">
+              {{category.name | uppercase}}
+            </a>
+            <!--Display the submenu items-->
+            <div id="collapseBasic.{{category.name}}" [collapse]="category.isCollapsed" class="subItems"
+              *ngIf="category.subCatStatus" [isAnimated]="true">
+
+              <ul>
+                <li class="{{subCategory.class}}" *ngFor="let subCategory of category.subCategories">
+                  <a (click)="getSubCategories(subCategory)" href="#">{{subCategory.name}}</a></li>
+              </ul>
+            </div>
+          </li>
         </ul>
       </div>
-    </li>
-  </ul>
 
-</div>
