--- a/ecommerce-client/src/app/pages/products/products.component.css
+++ b/ecommerce-client/src/app/pages/products/products.component.css
@@ -1,7 +1,8 @@
 .card{
-  left: 419px;
-  top: 200px;
   border-style: none;
+  width: 20rem;
+  height: 22.125rem;
+  margin: 2.8rem;
 }
 .card-header{
   background: none;
