--- a/ecommerce-client/src/app/shared/components/navbar/navbar.component.css
+++ b/ecommerce-client/src/app/shared/components/navbar/navbar.component.css
@@ -1,15 +1,43 @@
-#top-nav{
-  position: absolute;
+.top-nav{
+  /* display: flexbox; */
   width: 100%;
-  height: 166px;
-  top: 0px;
+  height: 10.375rem;
   background: #19434D;
+  /* z-index: auto; */
+  position: fixed;
+  top: 0;
 }
+
 #logo{
   position: absolute;
   left: 7.9rem;
   top: 1.19rem;
 }
-#subMenu{
-  padding-left: 50%;
+.subMenu{
+  color: #FFFFFF;
+  font-family: Circular Std Medium;
+  font-size: 1rem;
+  width: 100%;
+  list-style: none;
+}
+.subMenu a{
+  color: #FFFFFF;
+
+}
+.ng-select.custom{
+  width: 48rem;
+  top: 6.3125rem;
+  left: 50rem;
+  border-radius: 0.25rem;
+  position: fixed;
+}
+.ng-dropdown-panel{
+  width: auto !important;
+}
+ng-select .ng-dropdown-panel {
+  width: auto !important;
+  padding-left: 25%;
+}
+li{
+  display: inline;
 }
