--- a/ecommerce-client/src/app/shared/components/sidebar/sidebar.component.css
+++ b/ecommerce-client/src/app/shared/components/sidebar/sidebar.component.css
@@ -1,22 +1,20 @@
-/* The sidebar menu */
 .sidenav {
-  width: 285px; /* Set the width of the sidebar */
-  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
-  top: 101px; /* Stay at the top */
-  left: 106px;
-  background-color: #FFFFFF; /* White */
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
-  position: absolute;
+  width: 17.8125rem;
+  position: fixed;
+  background-color: #FFFFFF;
+  top: 6.31rem; /* Stay at the top */
+  left: 6.63rem;
   box-shadow: 2px 6px 5px rgba(0, 0, 0, 0.25); /* Box Shadow*/
   border-radius: 1%;
+  overflow: hidden;
+  z-index: 1;
+  padding-top: 1.25rem;
 }
-.sidenav ul{
-  list-style: none
+.sidenav ul {
+  list-style: none;
+  text-decoration: none;
+  display: inline-block;
 }
-
-/* The navigation menu links */
 .sidenav a {
   text-decoration: none;
   font-size: 25px;
@@ -24,6 +22,7 @@
   display: block;
   font-family: Circular Std Medium;
 }
+
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
@@ -66,11 +65,11 @@ ul{
 }
 .subItemSelected a{
   color: #F39200 !important;
-  display: flex;
   font-size: 15px;
-  font-weight: bold;
 }
 .subItemSelected a:before{
-  content: "| ";
+  content: "|  ";
+  font-weight: bold;
+
 }
 
